# rfm-analysis-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  components.py  docker-compose.yml  pyproject.toml
data/: rfm_output.csv
notebook/: rfm.ipynb
