[tool.poetry]
name = "rfmsegmentdashboard"
version = "0.1.0"
description = ""
authors = ["zoohta <koh.0430.ta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
jupyter = "^1.0.0"
plotly = "^5.14.1"
dash = "^2.10.0"
dash-bootstrap-components = "^1.4.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

